--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             </ul>
           </nav>
     </header>
+
     <main>
+      <!-- here is the main-->
+      <h1>Welcome</h1>
         <section id="about">
             <h2>About Me</h2>
             <p> Hey, I'm Amina, a beginner web developer. So get ready to discover my first portfolio web page, where I will be explaining the  importance of being creative.
